--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,13 +6,13 @@
 #    By: jowoundi <jowoundi@student.s19.be>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/28 16:36:17 by jowoundi          #+#    #+#              #
-#    Updated: 2025/10/13 18:25:21 by jowoundi         ###   ########.fr        #
+#    Updated: 2025/11/04 15:49:52 by jowoundi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -g3 #-fsanitize=thread -g3
+CFLAGS = -Wall -Wextra -Werror -g3 #-fsanitize=thread
 GREEN   = "\\033[32m"
 YELLOW	= "\\033[33m"
 NC      = "\\033[0m"
